--- a/package.json
+++ b/package.json
@@ -1,42 +1,85 @@
 {
-  "name": "learn-svg",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://yangsonhung.github.io/learn-svg",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "gh-pages": "^3.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "learn-svg",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://yangsonhung.github.io/learn-svg",
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "gh-pages": "^3.2.0",
+        "highlight.js": "^11.0.0-beta1",
+        "node-sass": "^6.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "4.0.3",
+        "web-vitals": "^1.0.1"
+    },
+    "scripts": {
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build",
+        "start": "cross-env PORT=9527 react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ],
+        "rules": {
+            "react/self-closing-comp": "warn",
+            "no-multi-spaces": "error",
+            "padding-line-between-statements": [
+                "error",
+                {
+                    "blankLine": "always",
+                    "prev": "*",
+                    "next": "return"
+                },
+                {
+                    "blankLine": "always",
+                    "prev": [
+                        "const",
+                        "let",
+                        "var"
+                    ],
+                    "next": "*"
+                },
+                {
+                    "blankLine": "any",
+                    "prev": [
+                        "const",
+                        "let",
+                        "var"
+                    ],
+                    "next": [
+                        "const",
+                        "let",
+                        "var"
+                    ]
+                }
+            ],
+            "semi": [
+                "error",
+                "always"
+            ]
+        }
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3"
+    }
 }
